force-app/main/default/objects/custom_create127__c/custom_create127__c.object-meta.xml
<CustomObject>
    <label>Custom created object127</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects127</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>