force-app/main/default/objects/custom_create127__c/fields/custom_create_127field554__c.field-meta.xml
<CustomField>
    <fullName>custom_create_127field554__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 127field554</label>
    <type>Checkbox</type>
</CustomField>